tests/rosetta/transpiler/OCaml/angles-geometric-normalization-and-conversion.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/angles-geometric-normalization-and-conversion.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Angles-geometric-normalization-and-conversion" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/angles-geometric-normalization-and-conversion.ml", line 52, characters 24-25:
52 |   __ret := (Obj.magic ((d mod 360.0)) : float); raise Return
                             ^
Error: This expression has type float but an expression was expected of type
         int
