tests/rosetta/transpiler/OCaml/angles-geometric-normalization-and-conversion.ml
(* Generated by Mochi transpiler v0.10.40 on 2025-07-26 05:05 +0700 *)


let rec __show v =
  let open Obj in
  let rec list_aux o =
    if is_int o && (magic (obj o) : int) = 0 then "" else
      let hd = field o 0 in
      let tl = field o 1 in
      let rest = list_aux tl in
      if rest = "" then __show (obj hd) else __show (obj hd) ^ "; " ^ rest
  in
  let r = repr v in
  if is_int r then string_of_int (magic v) else
  match tag r with
  | 0 -> if size r = 0 then "[]" else "[" ^ list_aux r ^ "]"
  | 252 -> (magic v : string)
  | 253 -> string_of_float (magic v)
  | _ -> "<value>"


let nil = Obj.repr 0


let _now_seed = ref 0
let _now_seeded = ref false

let _now () =
  if not !_now_seeded then (
    match Sys.getenv_opt "MOCHI_NOW_SEED" with
    | Some s -> (try _now_seed := int_of_string s; _now_seeded := true with _ -> ())
    | None -> ()
  );
  if !_now_seeded then (
    _now_seed := (!(_now_seed) * 1664525 + 1013904223) mod 2147483647;
    !_now_seed
  ) else int_of_float (Sys.time () *. 1000000000.)


let _mem () =
  int_of_float (Gc.allocated_bytes ())

exception Break
exception Continue

exception Return

let rec d2d d =
  let __ret = ref 0.0 in
  (try
  let d = (Obj.magic d : float) in
  __ret := (Obj.magic ((d mod 360.0)) : float); raise Return
  with Return -> !__ret)

let rec g2g g =
  let __ret = ref 0.0 in
  (try
  let g = (Obj.magic g : float) in
  __ret := (Obj.magic ((g mod 400.0)) : float); raise Return
  with Return -> !__ret)

let rec m2m m =
  let __ret = ref 0.0 in
  (try
  let m = (Obj.magic m : float) in
  __ret := (Obj.magic ((m mod 6400.0)) : float); raise Return
  with Return -> !__ret)

let rec r2r r =
  let __ret = ref 0.0 in
  (try
  let r = (Obj.magic r : float) in
  __ret := (Obj.magic ((r mod (2.0 *. 3.141592653589793))) : float); raise Return
  with Return -> !__ret)

let rec d2g d =
  let __ret = ref 0.0 in
  (try
  let d = (Obj.magic d : float) in
  __ret := (Obj.magic (((d2d (d) *. 400.0) /. 360.0)) : float); raise Return
  with Return -> !__ret)

let rec d2m d =
  let __ret = ref 0.0 in
  (try
  let d = (Obj.magic d : float) in
  __ret := (Obj.magic (((d2d (d) *. 6400.0) /. 360.0)) : float); raise Return
  with Return -> !__ret)

let rec d2r d =
  let __ret = ref 0.0 in
  (try
  let d = (Obj.magic d : float) in
  __ret := (Obj.magic (((d2d (d) *. 3.141592653589793) /. 180.0)) : float); raise Return
  with Return -> !__ret)

let rec g2d g =
  let __ret = ref 0.0 in
  (try
  let g = (Obj.magic g : float) in
  __ret := (Obj.magic (((g2g (g) *. 360.0) /. 400.0)) : float); raise Return
  with Return -> !__ret)

let rec g2m g =
  let __ret = ref 0.0 in
  (try
  let g = (Obj.magic g : float) in
  __ret := (Obj.magic (((g2g (g) *. 6400.0) /. 400.0)) : float); raise Return
  with Return -> !__ret)

let rec g2r g =
  let __ret = ref 0.0 in
  (try
  let g = (Obj.magic g : float) in
  __ret := (Obj.magic (((g2g (g) *. 3.141592653589793) /. 200.0)) : float); raise Return
  with Return -> !__ret)

let rec m2d m =
  let __ret = ref 0.0 in
  (try
  let m = (Obj.magic m : float) in
  __ret := (Obj.magic (((m2m (m) *. 360.0) /. 6400.0)) : float); raise Return
  with Return -> !__ret)

let rec m2g m =
  let __ret = ref 0.0 in
  (try
  let m = (Obj.magic m : float) in
  __ret := (Obj.magic (((m2m (m) *. 400.0) /. 6400.0)) : float); raise Return
  with Return -> !__ret)

let rec m2r m =
  let __ret = ref 0.0 in
  (try
  let m = (Obj.magic m : float) in
  __ret := (Obj.magic (((m2m (m) *. 3.141592653589793) /. 3200.0)) : float); raise Return
  with Return -> !__ret)

let rec r2d r =
  let __ret = ref 0.0 in
  (try
  let r = (Obj.magic r : float) in
  __ret := (Obj.magic (((r2r (r) *. 180.0) /. 3.141592653589793)) : float); raise Return
  with Return -> !__ret)

let rec r2g r =
  let __ret = ref 0.0 in
  (try
  let r = (Obj.magic r : float) in
  __ret := (Obj.magic (((r2r (r) *. 200.0) /. 3.141592653589793)) : float); raise Return
  with Return -> !__ret)

let rec r2m r =
  let __ret = ref 0.0 in
  (try
  let r = (Obj.magic r : float) in
  __ret := (Obj.magic (((r2r (r) *. 3200.0) /. 3.141592653589793)) : float); raise Return
  with Return -> !__ret)

let rec main () =
  let __ret = ref (Obj.magic 0) in
  (try
  let angles = ref ([(-.(2.0)); (-.(1.0)); 0.0; 1.0; 2.0; 6.2831853; 16.0; 57.2957795; 359.0; 399.0; 6399.0; 1000000.0]) in
  print_endline ("degrees normalized_degs gradians mils radians");
  (try List.iter (fun a ->
    try
  print_endline ((((((((((string_of_float (a)) ^ " ") ^ (string_of_float (d2d (a)))) ^ " ") ^ (string_of_float (d2g (a)))) ^ " ") ^ (string_of_float (d2m (a)))) ^ " ") ^ (string_of_float (d2r (a)))));
    with Continue -> ()) !angles with Break -> ());
  print_endline ("\ngradians normalized_grds degrees mils radians");
  (try List.iter (fun a ->
    try
  print_endline ((((((((((string_of_float (a)) ^ " ") ^ (string_of_float (g2g (a)))) ^ " ") ^ (string_of_float (g2d (a)))) ^ " ") ^ (string_of_float (g2m (a)))) ^ " ") ^ (string_of_float (g2r (a)))));
    with Continue -> ()) !angles with Break -> ());
  print_endline ("\nmils normalized_mils degrees gradians radians");
  (try List.iter (fun a ->
    try
  print_endline ((((((((((string_of_float (a)) ^ " ") ^ (string_of_float (m2m (a)))) ^ " ") ^ (string_of_float (m2d (a)))) ^ " ") ^ (string_of_float (m2g (a)))) ^ " ") ^ (string_of_float (m2r (a)))));
    with Continue -> ()) !angles with Break -> ());
  print_endline ("\nradians normalized_rads degrees gradians mils");
  (try List.iter (fun a ->
    try
  print_endline ((((((((((string_of_float (a)) ^ " ") ^ (string_of_float (r2r (a)))) ^ " ") ^ (string_of_float (r2d (a)))) ^ " ") ^ (string_of_float (r2g (a)))) ^ " ") ^ (string_of_float (r2m (a)))));
    with Continue -> ()) !angles with Break -> ());
    !__ret
  with Return -> !__ret)

let () =
  let mem_start = _mem () in
  let start = _now () in
  ignore (main ());
  let finish = _now () in
  let mem_end = _mem () in
  let dur = (finish - start) / 1000 in
  let mem_bytes = max 0 (mem_end - mem_start) in
  Printf.printf "{\n  \"duration_us\": %d,\n  \"memory_bytes\": %d,\n  \"name\": \"%s\"\n}\n" dur mem_bytes "main";
